--- a/test.html
+++ b/test.html
@@ -1,170 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oversized T-Shirt Catalog</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Product Page</title>
+  <style>
+    body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+}
 
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            padding: 20px;
-            background-color: #f9f9f9;
-        }
+.product-page {
+  max-width: 1200px;
+  margin: auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
 
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-            width: 80%;
-        }
+.product-main {
+  display: flex;
+  margin-bottom: 20px;
+}
 
-        .product-tile {
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: center;
-            border-radius: 8px;
-            background-color: #fff;
-        }
+.product-images {
+  flex: 1;
+}
 
-        .product-tile img {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
+.main-image {
+  width: 100%;
+  height: auto;
+}
 
-        .title {
-            font-size: 16px;
-            font-weight: bold;
-            margin: 10px 0 5px;
-        }
+.thumbnail-images img {
+  width: 80px;
+  height: 80px;
+  margin: 5px;
+  cursor: pointer;
+}
 
-        .category {
-            font-size: 14px;
-            color: #666;
-            margin-bottom: 5px;
-        }
+.product-info {
+  flex: 1;
+  padding: 20px;
+}
 
-        .price {
-            font-size: 16px;
-            font-weight: bold;
-            color: #000;
-        }
-    </style>
+.product-info h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.price {
+  font-size: 20px;
+  color: #333;
+}
+
+.original-price {
+  text-decoration: line-through;
+  color: #777;
+  margin-left: 10px;
+}
+
+.discount {
+  color: #ff0000;
+  margin-left: 5px;
+}
+
+.description {
+  margin: 15px 0;
+  color: #555;
+}
+
+.features {
+  list-style: none;
+  padding: 0;
+  margin: 15px 0;
+}
+
+.features li {
+  margin-bottom: 5px;
+}
+
+.options {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+}
+
+.color-options, .size-options {
+  margin-bottom: 10px;
+}
+
+.color-option, .size-option {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
+
+.color-option.green { background-color: green; }
+.color-option.pink { background-color: pink; }
+.color-option.orange { background-color: orange; }
+
+.actions {
+  display: flex;
+  gap: 10px;
+}
+
+.add-to-cart, .buy-now {
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.add-to-cart {
+  background-color: #333;
+  color: #fff;
+}
+
+.buy-now {
+  background-color: #ff6600;
+  color: #fff;
+}
+
+.related-products {
+  margin-top: 30px;
+}
+
+.related-products h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.product-list {
+  display: flex;
+  gap: 20px;
+}
+
+.related-product {
+  width: 200px;
+  background-color: #fff;
+  padding: 10px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.related-product img {
+  width: 100%;
+  height: auto;
+}
+
+.related-product .price {
+  font-size: 18px;
+  color: #333;
+  margin-top: 5px;
+}
+
+  </style>
 </head>
 <body>
-    <div class="grid-container">
-        <!-- Each tile represents a product -->
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 1">
-            <p class="title">Colourblock: Sapphire</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 899</p>
+  <div class="product-page">
+    <div class="product-main">
+      <div class="product-images">
+        <img src="main-image.jpg" alt="Main Product Image" class="main-image">
+        <div class="thumbnail-images">
+          <img src="thumb1.jpg" alt="Thumbnail 1">
+          <img src="thumb2.jpg" alt="Thumbnail 2">
+          <img src="thumb3.jpg" alt="Thumbnail 3">
         </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 2">
-            <p class="title">Patchwork T-Shirt: Freedom</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 999</p>
+      </div>
+      <div class="product-info">
+        <h1>Over Sized T-shirt</h1>
+        <p class="price">$899 <span class="original-price">$1000.00</span> <span class="discount">25% Off</span></p>
+        <p class="description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum, fuga.
+        </p>
+        <ul class="features">
+          <li>1 Year & Above Brand Warranty</li>
+          <li>30 Days Return Policy</li>
+          <li>Cash on Delivery Available</li>
+        </ul>
+        <div class="options">
+          <div class="color-options">
+            <label>Color:</label>
+            <button class="color-option green"></button>
+            <button class="color-option pink"></button>
+            <button class="color-option orange"></button>
+          </div>
+          <div class="size-options">
+            <label>Size:</label>
+            <button class="size-option">S</button>
+            <button class="size-option">M</button>
+            <button class="size-option">L</button>
+            <button class="size-option">XL</button>
+            <button class="size-option">XXL</button>
+          </div>
         </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 3">
-            <p class="title">Looney Tunes: Taz Outburst</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 899</p>
+        <div class="actions">
+          <button class="add-to-cart">Add To Cart</button>
+          <button class="buy-now">Buy Now</button>
         </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 4">
-            <p class="title">Brooklyn Nine-Nine: 99th Precinct</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1049</p>
-        </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 5">
-            <p class="title">One Piece: Pirate Logo</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1199</p>
-        </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 5">
-            <p class="title">One Piece: Pirate Logo</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1199</p>
-        </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 5">
-            <p class="title">One Piece: Pirate Logo</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1199</p>
-        </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 5">
-            <p class="title">One Piece: Pirate Logo</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1199</p>
-        </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 5">
-            <p class="title">One Piece: Pirate Logo</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1199</p>
-        </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 5">
-            <p class="title">One Piece: Pirate Logo</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1199</p>
-        </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 5">
-            <p class="title">One Piece: Pirate Logo</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1199</p>
-        </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 5">
-            <p class="title">One Piece: Pirate Logo</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1199</p>
-        </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 5">
-            <p class="title">One Piece: Pirate Logo</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1199</p>
-        </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 5">
-            <p class="title">One Piece: Pirate Logo</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1199</p>
-        </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 5">
-            <p class="title">One Piece: Pirate Logo</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1199</p>
-        </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 5">
-            <p class="title">One Piece: Pirate Logo</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1199</p>
-        </div>
-        <div class="product-tile">
-            <img src="needover2.png" alt="T-Shirt 5">
-            <p class="title">One Piece: Pirate Logo</p>
-            <p class="category">Oversized T-Shirts</p>
-            <p class="price">₹ 1199</p>
-        </div>
-        <!-- Add more product tiles to reach a total of 12 items -->
+      </div>
     </div>
+    <div class="related-products">
+      <h2>Related Products</h2>
+      <div class="product-list">
+        <div class="related-product">
+          <img src="related1.jpg" alt="Related Product 1">
+          <p>Over Sized T-shirt</p>
+          <p class="price">$1299.85</p>
+        </div>
+        <div class="related-product">
+          <img src="related2.jpg" alt="Related Product 2">
+          <p>Over Sized T-shirt</p>
+          <p class="price">$3288.85</p>
+        </div>
+        <div class="related-product">
+          <img src="related3.jpg" alt="Related Product 3">
+          <p>Over Sized T-shirt</p>
+          <p class="price">$1288.85</p>
+        </div>
+        <div class="related-product">
+          <img src="related4.jpg" alt="Related Product 4">
+          <p>Over Sized T-shirt</p>
+          <p class="price">$328.85</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
