--- a/public/test.html
+++ b/public/test.html
@@ -1,82 +1,101 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>Account Suspended</title>
+    <title>Account Suspended</title>
 
-        <!-- Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,600" rel="stylesheet" type="text/css">
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito:200,600"
+      rel="stylesheet"
+      type="text/css"
+    />
 
-        <!-- Styles -->
-        <style>
-            html, body {
-                background-color: #ffffff;
-                color: #000000;
-                font-family: 'Nunito', sans-serif;
-                font-weight: 200;
-                height: 100vh;
-                margin: 0;
-            }
+    <!-- Styles -->
+    <style>
+      html,
+      body {
+        background-color: #ffffff;
+        color: #000000;
+        font-family: "Nunito", sans-serif;
+        font-weight: 200;
+        height: 100vh;
+        margin: 0;
+      }
 
-            .full-height {
-                height: 100vh;
-            }
+      .full-height {
+        height: 100vh;
+      }
 
-            .flex-center {
-                align-items: center;
-                display: flex;
-                justify-content: center;
-            }
+      .flex-center {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+      }
 
-            .position-ref {
-                position: relative;
-            }
+      .position-ref {
+        position: relative;
+      }
 
-            .top-right {
-                position: absolute;
-                right: 10px;
-                top: 18px;
-            }
+      .top-right {
+        position: absolute;
+        right: 10px;
+        top: 18px;
+      }
 
-            .content {
-                text-align: center;
-            }
+      .content {
+        text-align: center;
+      }
 
-            .title {
-                font-size: 84px;
-                font-weight: bold;
-                color: rgb(255, 0, 0);
-            }
+      .title {
+        font-size: 84px;
+        font-weight: bold;
+        color: rgb(255, 0, 0);
+      }
 
-            .links > a {
-                color: #636b6f;
-                padding: 0 25px;
-                font-size: 12px;
-                font-weight: 600;
-                letter-spacing: .1rem;
-                text-decoration: none;
-                text-transform: uppercase;
-            }
+      .links > a {
+        color: #636b6f;
+        padding: 0 25px;
+        font-size: 12px;
+        font-weight: 600;
+        letter-spacing: 0.1rem;
+        text-decoration: none;
+        text-transform: uppercase;
+      }
 
-            .m-b-md {
-                margin-bottom: 30px;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="flex-center position-ref full-height">
-            <div class="content">
-                <div class="title m-b-md">
-                    Account Banned
-                </div>
+      .m-b-md {
+        margin-bottom: 30px;
+      }
 
-                <h2 class="m-b-md">
-                    Dear user, your account has been temporarily banned for violating community guidelines. 
-                If you believe this is a mistake, please email us at <a href="mailto:menshub@gmail.com">menshub@gmail.com</a>, and our admins will review your case.</h2>
-            </div>
-        </div>
-    </body>
+      .loader {
+        width: 48px;
+        height: 48px;
+        border-radius: 50%;
+        display: inline-block;
+        border-top: 3px solid #315f23;
+        border-right: 3px solid transparent;
+        box-sizing: border-box;
+        animation: rotation 1s linear infinite;
+      }
+
+      @keyframes rotation {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="flex-center position-ref full-height">
+      <div class="content">
+        <span class="loader"></span>
+      </div>
+    </div>
+  </body>
 </html>
