--- a/test.html
+++ b/test.html
@@ -3,234 +3,195 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Product Page</title>
-  <style>
-    body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
-}
-
-.product-page {
-  max-width: 1200px;
-  margin: auto;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-.product-main {
-  display: flex;
-  margin-bottom: 20px;
-}
-
-.product-images {
-  flex: 1;
-}
-
-.main-image {
-  width: 100%;
-  height: auto;
-}
-
-.thumbnail-images img {
-  width: 80px;
-  height: 80px;
-  margin: 5px;
-  cursor: pointer;
-}
-
-.product-info {
-  flex: 1;
-  padding: 20px;
-}
-
-.product-info h1 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.price {
-  font-size: 20px;
-  color: #333;
-}
-
-.original-price {
-  text-decoration: line-through;
-  color: #777;
-  margin-left: 10px;
-}
-
-.discount {
-  color: #ff0000;
-  margin-left: 5px;
-}
-
-.description {
-  margin: 15px 0;
-  color: #555;
-}
-
-.features {
-  list-style: none;
-  padding: 0;
-  margin: 15px 0;
-}
-
-.features li {
-  margin-bottom: 5px;
-}
-
-.options {
-  display: flex;
-  flex-direction: column;
-  margin: 15px 0;
-}
-
-.color-options, .size-options {
-  margin-bottom: 10px;
-}
-
-.color-option, .size-option {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  margin-right: 5px;
-  border: 1px solid #ccc;
-  cursor: pointer;
-}
-
-.color-option.green { background-color: green; }
-.color-option.pink { background-color: pink; }
-.color-option.orange { background-color: orange; }
-
-.actions {
-  display: flex;
-  gap: 10px;
-}
-
-.add-to-cart, .buy-now {
-  padding: 10px 20px;
-  border: none;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-.add-to-cart {
-  background-color: #333;
-  color: #fff;
-}
-
-.buy-now {
-  background-color: #ff6600;
-  color: #fff;
-}
-
-.related-products {
-  margin-top: 30px;
-}
-
-.related-products h2 {
-  font-size: 20px;
-  margin-bottom: 10px;
-}
-
-.product-list {
-  display: flex;
-  gap: 20px;
-}
-
-.related-product {
-  width: 200px;
-  background-color: #fff;
-  padding: 10px;
-  text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.related-product img {
-  width: 100%;
-  height: auto;
-}
-
-.related-product .price {
-  font-size: 18px;
-  color: #333;
-  margin-top: 5px;
-}
-
-  </style>
+  <title>Document</title>
 </head>
 <body>
-  <div class="product-page">
-    <div class="product-main">
-      <div class="product-images">
-        <img src="main-image.jpg" alt="Main Product Image" class="main-image">
-        <div class="thumbnail-images">
-          <img src="thumb1.jpg" alt="Thumbnail 1">
-          <img src="thumb2.jpg" alt="Thumbnail 2">
-          <img src="thumb3.jpg" alt="Thumbnail 3">
-        </div>
+  <nav class="custom-navbar navbar navbar navbar-expand-md" arial-label="Furni navigation bar" >
+    <div class="container">
+      <div id="navlogo" >
+        <a href=""><img src="/images/img/logo/A_logo_with_the_letters_M_and_H_together_with_a_cap_on_M-removebg-preview.png" alt=""></a>
       </div>
-      <div class="product-info">
-        <h1>Over Sized T-shirt</h1>
-        <p class="price">$899 <span class="original-price">$1000.00</span> <span class="discount">25% Off</span></p>
-        <p class="description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum, fuga.
-        </p>
-        <ul class="features">
-          <li>1 Year & Above Brand Warranty</li>
-          <li>30 Days Return Policy</li>
-          <li>Cash on Delivery Available</li>
+      <a class="navbar-brand" href="index.html"><span class="brandname">Men's Hub </span></a>
+  
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarsFurni"
+        aria-controls="navbarsFurni"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse" id="navbarsFurni">
+        <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
+          <li class="nav-item active">
+            <a class="nav-link" href="/home">Home</a>
+          <li><a class="nav-link" href="/shop">Shop</a></li>
+          <li><a class="nav-link" href="/about">About us</a></li>
+          <li><a class="nav-link" href="/contact">Contact us</a></li>
+          <li><a class="nav-link" href="/dashboard">MY Account</a></li>       
         </ul>
-        <div class="options">
-          <div class="color-options">
-            <label>Color:</label>
-            <button class="color-option green"></button>
-            <button class="color-option pink"></button>
-            <button class="color-option orange"></button>
-          </div>
-          <div class="size-options">
-            <label>Size:</label>
-            <button class="size-option">S</button>
-            <button class="size-option">M</button>
-            <button class="size-option">L</button>
-            <button class="size-option">XL</button>
-            <button class="size-option">XXL</button>
-          </div>
-        </div>
-        <div class="actions">
-          <button class="add-to-cart">Add To Cart</button>
-          <button class="buy-now">Buy Now</button>
+        <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
+          <li>
+            <a href="wishlist.html">
+              <a href="wishlist.html"><i class="fa fa-heart wishicon2" style="color: white;"> </i></a>        
+            </a>
+          </li>
+          <li>
+            <a class="nav-link" href="#"><img src="/images/user.svg" /></a>
+          </li>
+          <li>
+            <a class="nav-link" href="/cart"
+              ><img src="/images/cart.svg"
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+
+
+  
+
+   <!-- Start Footer Section -->
+ <footer class="footer-section">
+  <div class="container relative">
+    <div class="logoimg">
+      <img src="/images/img/logo/A_logo_with_the_letters_M_and_H_together_with_a_cap_on_M-removebg-preview.png" alt="Image" class="img-fluid" />
+    </div>
+
+    <div class="row">
+      <div class="col-lg-8">
+        <div class="subscription-form">
+          <h3 class="d-flex align-items-center">
+            <span class="me-1"
+              ><img
+                src="/images/envelope-outline.svg"
+                alt="Image"
+                class="img-fluid" /></span
+            ><span>Subscribe to Men's Hub</span>
+          </h3>
+
+          <form action="#" class="row g-3">
+            <div class="col-auto">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Enter your name"
+              />
+            </div>
+            <div class="col-auto">
+              <input
+                type="email"
+                class="form-control"
+                placeholder="Enter your email"
+              />
+            </div>
+            <div class="col-auto">
+              <button class="  planebutton">
+                <span class="fa fa-paper-plane ">send</span>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
-    <div class="related-products">
-      <h2>Related Products</h2>
-      <div class="product-list">
-        <div class="related-product">
-          <img src="related1.jpg" alt="Related Product 1">
-          <p>Over Sized T-shirt</p>
-          <p class="price">$1299.85</p>
+
+    <div class="row g-5 mb-5">
+      <div class="col-lg-4">
+        <div class="mb-4 footer-logo-wrap">
+          <a href="#" class="footer-logo">MEN'S HUB<span>.</span></a>
         </div>
-        <div class="related-product">
-          <img src="related2.jpg" alt="Related Product 2">
-          <p>Over Sized T-shirt</p>
-          <p class="price">$3288.85</p>
+        <p class="mb-4">
+          Your one-stop destination for premium men's fashion.
+          Shop the latest trends in clothing, accessories, and more. 
+        Quality and style delivered right to your doorstep.
+        </p>
+
+        <ul class="list-unstyled custom-social">
+          <li>
+            <a href="#"><span class="fa fa-brands fa-facebook-f"></span></a>
+          </li>
+          <li>
+            <a href="#"><span class="fa fa-brands fa-twitter"></span></a>
+          </li>
+          <li>
+            <a href="#"><span class="fa fa-brands fa-instagram"></span></a>
+          </li>
+          <li>
+            <a href="#"><span class="fa fa-brands fa-linkedin"></span></a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-lg-8">
+        <div class="row links-wrap">
+          <div class="col-6 col-sm-6 col-md-3">
+            <ul class="list-unstyled">
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact us</a></li>
+            </ul>
+          </div>
+
+          <div class="col-6 col-sm-6 col-md-3">
+            <ul class="list-unstyled">
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Knowledge base</a></li>
+              <li><a href="#">Live chat</a></li>
+            </ul>
+          </div>
+
+          <div class="col-6 col-sm-6 col-md-3">
+            <ul class="list-unstyled">
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Our team</a></li>
+              <li><a href="#">Leadership</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="related-product">
-          <img src="related3.jpg" alt="Related Product 3">
-          <p>Over Sized T-shirt</p>
-          <p class="price">$1288.85</p>
+      </div>
+    </div>
+    
+    <div class="paymentfooterimgdiv" style="display: flex;">
+      <p>100% secure payment :</p>
+      <img class="paymentfooterimg" src="/images/img/payment-method.png" alt="img not renederd">
+    </div>
+
+    <div class="border-top copyright">
+      <div class="row pt-4">
+        <div class="col-lg-6">
+          <p class="mb-2 text-center text-lg-start">
+            Copyright &copy;
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            . All Rights Reserved;to
+            <a hreff="#">Men's Hub</a>
+            <!-- License information: https://untree.co/license/ -->
+          </p>
         </div>
-        <div class="related-product">
-          <img src="related4.jpg" alt="Related Product 4">
-          <p>Over Sized T-shirt</p>
-          <p class="price">$328.85</p>
+
+        <div class="col-lg-6 text-center text-lg-end">
+          <ul class="list-unstyled d-inline-flex ms-auto">
+            <li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
         </div>
       </div>
     </div>
   </div>
+</footer>
+<!-- End Footer Section -->
+  
+  <script src="/js/users/header.js"></script>
+  
 </body>
 </html>
